change DB schema, refactor and adjust entities